# CarePocket

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_users.py  0002_expenses_tracking.py  0003_income_tracking.py
backend/app/api/v1/: router.py
backend/app/api/v1/auth/: __init__.py
backend/app/api/v1/expenses/: __init__.py  mapper.py  router.py
backend/app/api/v1/incomes/: __init__.py  mapper.py  router.py
backend/app/api/v1/users/: __init__.py
backend/app/core/: settings.py
backend/app/db/: init_db.py
backend/app/models/: __init__.py
backend/app/modules/: __init__.py
backend/app/modules/expenses/: __init__.py  models.py  schemas.py  services.py
backend/app/modules/incomes/: __init__.py  models.py  schemas.py  services.py
backend/app/modules/ledgers/: models.py  services.py  types.py
backend/app/modules/users/: auth.py  models.py  services.py  utils.py
docs/: ideas.md
frontend/: index.html  package.json  tsconfig.json
frontend/src/: App.tsx
frontend/src/components/: AuthLayout.tsx  FormField.tsx  ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  NotFoundPage.tsx  RegisterPage.tsx
frontend/src/styles/: global.css
frontend/src/types/: auth.ts  expenses.ts  incomes.ts
src/alembic/: env.py
src/alembic/versions/: 0001_initial_users.py
src/app/: __init__.py  main.py
src/app/api/v1/: health.py
src/app/api/v1/auth/: router.py
src/app/api/v1/users/: mapper.py  router.py  schemas.py
src/app/core/: settings.py
src/app/db/: session.py
src/app/modules/users/: db.py  manager.py
tests/: conftest.py  test_smoke.py
